namespace SchedulerPlatform.UI.Models;

public class Client
{
    public int Id { get; set; }
    
    public string ClientName { get; set; } = string.Empty;
}
